advanced section is done

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Required and installed libraries
 # --------------------------------------------------------------------------------------------# 
 tqdm==4.64.0
-torch==1.11.0
+torch==1.11.0+cpu
 numpy==1.21.5
 pandas==1.4.2
+torchvision==0.12.0+cpu
 # --------------------------------------------------------------------------------------------# 
